--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+
   <meta charset="utf-8">
   <title>CORMS</title>
   <base href="/">
@@ -10,6 +11,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+  <div style="color: rgb(192, 189, 185);"></div>
   <app-root></app-root>
+</div>
 </body>
 </html>
